--- a/Latex Examples/tables.tex
+++ b/Latex Examples/tables.tex
@@ -36,3 +36,8 @@ def get_formatted_name(first, last, gender):
 \end{tabular}
 \label{tab:range_examples}
 \end{center}
+
+
+
+    \text{Ordering pad} & \text{Dishes and drinks ordered by customer including prices of each } & \text{Wonton soup £2, Water £0.80 , Total £2.80} & \text{Invoice pad} \\ \hline
+    \text{Waitor} & \text{A copy of the invoice } & \text{Wonton soup £2, Water £0.80, VAT 20%, Total  £3.36 } & \text{Invoice pad} \\ 
