--- a/coursework.tex
+++ b/coursework.tex
@@ -1,10 +1,10 @@
 \documentclass{report}
 \include{settings}
 \begin{document}
-\title{Coursework Title}
-\author{Your name}
-\lhead{Your name}
-\chead{Candidate No. 1234}
+\title{COMP 4}
+\author{Tommy Tham}
+\lhead{Tommy Tham}
+\chead{Candidate No. 5064}
 \rhead{Centre No. 22151}
 \maketitle
 \tableofcontents
